# CMake_Setups

./: README.md  snippets.txt
Step01/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
Step02/: CMakeLists.txt  README.md  TutorialConfig.h.in
Step02/MathFunctions/: mysqrt.cxx
Step03/: CMakeLists.txt  README.md  tutorial.cxx
Step03/MathFunctions/: CMakeLists.txt
Step04/: CMakeLists.txt
Step04/MathFunctions/: CMakeLists.txt  mysqrt.cxx
Step05/: CMakeLists.txt
Step05/MathFunctions/: CMakeLists.txt  MakeTable.cxx  mysqrt.cxx
Step06/: CMakeLists.txt  README.md
Step06/MathFunctions/: CMakeLists.txt  mysqrt.cxx
Step07/: CMakeLists.txt  README.md
Step08/: CMakeLists.txt  README.md
Step08/MathFunctions/: CMakeLists.txt
Step09/: README.md  tutorial.cxx
Step09/MathFunctions/: CMakeLists.txt  MakeTable.cxx
Step10/: CMakeLists.txt  README.md
Step10/MathFunctions/: CMakeLists.txt  MathFunctions.h
Step11/: CMakeLists.txt  README.md
Step11/MathFunctions/: CMakeLists.txt
Step12/: CMakeLists.txt  README.md
Step12/MathFunctions/: CMakeLists.txt  mysqrt.cxx
Step12/debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CPackConfig.cmake  CPackSourceConfig.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  MathFunctionsTargets.cmake  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Tutorial.sln  Tutorial.vcxproj  Tutorial.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
Step12/debug/Debug/: MakeTable.ilk  MathFunctionsd.exp  MathFunctionsd.ilk  SqrtLibraryd.lib  Tutoriald.ilk
Step12/debug/MathFunctions/: INSTALL.vcxproj  INSTALL.vcxproj.filters  MakeTable.vcxproj  MakeTable.vcxproj.filters  MathFunctions.vcxproj  MathFunctions.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  SqrtLibrary.vcxproj  SqrtLibrary.vcxproj.filters
Step12/debug/MathFunctions/MakeTable.dir/Debug/MakeTable.tlog/: CL.write.1.tlog  MakeTable.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Step12/debug/MathFunctions/MathFunctions.dir/Debug/MathFunctions.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  MathFunctions.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Step12/debug/MathFunctions/SqrtLibrary.dir/Debug/SqrtLibrary.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Step12/debug/Tutorial.dir/Debug/Tutorial.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Step12/debug/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog
Step12/debug/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
Step12/release/: ALL_BUILD.vcxproj  CPackConfig.cmake  CPackSourceConfig.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  MathFunctionsConfigVersion.cmake  MathFunctionsTargets.cmake  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Tutorial.sln  Tutorial.vcxproj  Tutorial.vcxproj.filters  TutorialConfig.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
Step12/release/Debug/: MakeTable.ilk  MathFunctionsd.exp  MathFunctionsd.ilk  MathFunctionsd.lib  SqrtLibraryd.lib  Tutoriald.ilk
Step12/release/MathFunctions/: INSTALL.vcxproj  INSTALL.vcxproj.filters  MakeTable.vcxproj  MakeTable.vcxproj.filters  MathFunctions.vcxproj  MathFunctions.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  SqrtLibrary.vcxproj  SqrtLibrary.vcxproj.filters
Step12/release/MathFunctions/MakeTable.dir/Debug/MakeTable.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Step12/release/MathFunctions/MathFunctions.dir/Debug/MathFunctions.tlog/: CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  MathFunctions.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Step12/release/MathFunctions/SqrtLibrary.dir/Debug/SqrtLibrary.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  SqrtLibrary.lastbuildstate
Step12/release/Tutorial.dir/Debug/Tutorial.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  Tutorial.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Step12/release/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
Step12/release/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
Z_Step09_testing_static_shared/: CMakeLists.txt  README.md
Z_Step09_testing_static_shared/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
